--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ API_TOKEN_SALT=UDzugiftHq8OLnBST5njBQ==
 ADMIN_JWT_SECRET=Op0fLo275RAg3lWfchfQjA==
 TRANSFER_TOKEN_SALT=a/QDkXXPASx7330zXXq03A==
 # Database
-DATABASE_CLIENT=sqlite
+DATABASE_CLIENT=mysql
 DATABASE_FILENAME=.tmp/data.db
 JWT_SECRET=swOc+ca40Axn6QrDuOh+Kw==
