--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-users-permissions": "4.12.0",
     "@strapi/strapi": "4.12.0",
     "better-sqlite3": "8.0.1",
+    "mysql": "^2.18.1",
     "pg": "^8.11.2",
     "pg-connection-string": "^2.6.2"
   },
